src/test/ui/proc-macro/invalid-punct-ident-1.stderr
error: proc macro panicked
  --> $DIR/invalid-punct-ident-1.rs:15:1
   |
LL | invalid_punct!();
   | ^^^^^^^^^^^^^^^^^
   |
   = help: message: unsupported character `'`'`

error: aborting due to previous error

